k8s/networkpolicy/20-core/allow-ai-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ai-to-mongo
  namespace: bravo-mongo-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bravo-ai-integration-ns
    ports:
    - protocol: TCP
      port: 27017
