k8s/networkpolicy/20-core/allow-core-to-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-core-to-elasticsearch
  namespace: bravo-core-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bravo-efk-ns
    ports:
    - protocol: TCP
      port: 9200
